--- a/OpportunityMan/templates/bidder.html
+++ b/OpportunityMan/templates/bidder.html
@@ -20,7 +20,7 @@
                     <td>{{c.dob}}</td>
 {#                    {% if c.proposal %}#}
                     {% if c.resume %}
-                    <td><a href='{{c.proposal.url}}' download >{{c.proposal}}</a></td>
+                    <td><a href='{{c.resume.url}}' download >{{c.resume}}</a></td>
                     {% else %}
                     <td>Not submitted</td>
                     {% endif %}
